images/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: images
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    cert-manager.io/cluster-issuer: cloudflare
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: images.justinhinze.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photoprism-service
                port: 
                  number: 80
  tls:
    - hosts:
        - images.justinhinze.com
      secretName: images-justin-hinze-tls-secret
